templates/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
    kind: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeyield-backend
  template:
    metadata:
      labels:
        app: kubeyield-backend
        type: backend
    spec:
      containers:
      - name: backend
        image: codingleo1979/lettertofuture_backend:v1.0.1
        ports:
        - containerPort: 5000
