templates/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: kubeyield-backend
    type: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
